--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
+    "canvas-confetti": "^1.9.3",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "canvas-confetti": "^1.9.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
